import { createFileRegistry } from "@bufbuild/protobuf";
import {
  defaultScalarMapping,
  defaultScalarMappingForTsProto,
  ObjectType,
  type TypeOptions,
} from "@proto-graphql/codegen-core";
import {
  getTestapisFileDescriptorSet,
  type TestapisPackage,
} from "@proto-graphql/testapis-proto";
import { describe, expect, test } from "vitest";
import { printablesToStringWithImports } from "./__tests__/test-utils.js";
import { createObjectTypeCode } from "./objectType.js";
import type { PothosPrinterOptions } from "./util.js";

function generateObjectTypeCode(
  packageName: TestapisPackage,
  messageTypeName: string,
  options: PothosPrinterOptions,
): string {
  const typeOptions: TypeOptions = {
    partialInputs: false,
    scalarMapping:
      options.protobuf === "ts-proto"
        ? defaultScalarMappingForTsProto
        : defaultScalarMapping,
    ignoreNonMessageOneofFields: false,
  };

  const descSet = getTestapisFileDescriptorSet(packageName);
  const registry = createFileRegistry(descSet);
  const descMsg = registry.getMessage(`${packageName}.${messageTypeName}`);
  if (descMsg === undefined) {
    throw new Error(
      `Message ${messageTypeName} not found in package ${packageName}`,
    );
  }

  const objType = new ObjectType(descMsg, typeOptions);

  const printable = createObjectTypeCode(objType, registry, options);

  return printablesToStringWithImports(printable);
}

type TestCase = {
  test: string;
  args: {
    packageName: TestapisPackage;
    messageTypeName: string;
  };
};

type TestSuite = {
  suite: string;
  options: PothosPrinterOptions;
  cases: TestCase[];
};

const testSuites: TestSuite[] = [
  {
    suite: "ts-proto",
    options: {
      dsl: "pothos",
      protobuf: "ts-proto" as const,
      importPrefix: "@testapis/ts-proto",
      emitImportedFiles: false,
      filenameSuffix: ".pothos",
      pothos: {
        builderPath: "../../builder",
      },
    },
    cases: [
      {
        test: "generates code for a simple message",
        args: {
          packageName: "testapis.basic.scalars",
          messageTypeName: "Primitives",
        },
      },
      {
        test: "generates code for a message with nested fields",
        args: {
          packageName: "testapis.basic.scalars",
          messageTypeName: "Message",
        },
      },
      {
        test: "generates code for a message with oneofs",
        args: {
          packageName: "testapis.oneof.message_only",
          messageTypeName: "OneofParent",
        },
      },
      {
        test: "generates code for empty message",
        args: {
          packageName: "testapis.basic.empty",
          messageTypeName: "EmptyMessage",
        },
      },
      {
        test: "generates code for nested types",
        args: {
          packageName: "testapis.basic.nested",
          messageTypeName: "ParentMessage",
        },
      },
    ],
  },
  {
    suite: "protobuf-es-v1",
    options: {
      dsl: "pothos",
      protobuf: "protobuf-es-v1" as const,
      importPrefix: "@testapis/protobuf-es",
      emitImportedFiles: false,
      filenameSuffix: ".pothos",
      pothos: {
        builderPath: "../../builder",
      },
    },
    cases: [
      {
        test: "generates code for a simple message",
        args: {
          packageName: "testapis.basic.scalars",
          messageTypeName: "Primitives",
        },
      },
      {
        test: "generates code for a message with nested fields",
        args: {
          packageName: "testapis.basic.scalars",
          messageTypeName: "Message",
        },
      },
      {
        test: "generates code for a message with oneofs",
        args: {
          packageName: "testapis.oneof.message_only",
          messageTypeName: "OneofParent",
        },
      },
    ],
  },
  {
    suite: "protobuf-es",
    options: {
      dsl: "pothos",
      protobuf: "protobuf-es" as const,
      importPrefix: "@testapis/protobuf-es-v2",
      emitImportedFiles: false,
      filenameSuffix: ".pothos",
      pothos: {
        builderPath: "../../builder",
      },
    },
    cases: [
      {
        test: "generates code for a simple message with isMessage",
        args: {
          packageName: "testapis.basic.scalars",
          messageTypeName: "Primitives",
        },
      },
      {
        test: "generates code for a message with nested fields with isMessage",
        args: {
          packageName: "testapis.basic.scalars",
          messageTypeName: "Message",
        },
      },
      {
        test: "generates code for a message with oneofs with isMessage",
        args: {
          packageName: "testapis.oneof.message_only",
          messageTypeName: "OneofParent",
        },
      },
      {
        test: "generates code for nested types with isMessage",
        args: {
          packageName: "testapis.basic.nested",
          messageTypeName: "ParentMessage",
        },
      },
      {
        test: "generates code for empty message with isMessage",
        args: {
          packageName: "testapis.basic.empty",
          messageTypeName: "EmptyMessage",
        },
      },
      {
        test: "generates code for message with squashed oneof fields with isMessage",
        args: {
          packageName: "testapis.options.message_and_field",
          messageTypeName: "PrefixedMessage",
        },
      },
    ],
  },
  {
    suite: "with extensions",
    options: {
      dsl: "pothos",
      protobuf: "ts-proto" as const,
      importPrefix: "@testapis/ts-proto",
      emitImportedFiles: false,
      filenameSuffix: ".pothos",
      pothos: {
        builderPath: "../../builder",
      },
    },
    cases: [
      {
        test: "generates code for message with field extensions",
        args: {
          packageName: "testapis.options.message_and_field",
          messageTypeName: "PrefixedMessage",
        },
      },
    ],
  },
];

describe("createObjectTypeCode", () => {
  for (const { suite, options, cases } of testSuites) {
    describe(suite, () => {
      test.each(cases)("$test", ({ args }) => {
        const code = generateObjectTypeCode(
          args.packageName,
          args.messageTypeName,
          options,
        );
        expect(code).toMatchSnapshot();
      });
    });
  }
});
