// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createObjectTypeCode > protobuf-es > 'generates code for a message with nested fields with isMessage' 1`] = `
"import { isMessage, MessageShape } from "@bufbuild/protobuf";
import { MessageSchema } from "@testapis/protobuf-es-v2/testapis/basic/scalars/scalars_pb";
import { builder } from "../../builder";

export const Message$Ref = builder.objectRef<
  MessageShape<typeof MessageSchema>
>("Message");
builder.objectType(Message$Ref, {
  name: "Message",
  fields: (t) => ({
    requiredPrimitives: t.field({
      type: Primitives$Ref,
      nullable: false,
      description: "Required.",
      resolve: (source) => {
        return source.requiredPrimitives!;
      },
      extensions: {
        protobufField: {
          name: "required_primitives",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    optionalPrimitives: t.expose("optionalPrimitives", {
      type: Primitives$Ref,
      nullable: true,
      description: "Optional.",
      extensions: {
        protobufField: {
          name: "optional_primitives",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    requiredPrimitivesList: t.field({
      type: [Primitives$Ref],
      nullable: { list: false, items: false },
      description: "Required.",
      resolve: (source) => {
        return source.requiredPrimitivesList!;
      },
      extensions: {
        protobufField: {
          name: "required_primitives_list",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    optionalPrimitivesList: t.expose("optionalPrimitivesList", {
      type: [Primitives$Ref],
      nullable: { list: true, items: false },
      description: "Optional.",
      extensions: {
        protobufField: {
          name: "optional_primitives_list",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
  }),
  isTypeOf: (source) => {
    return isMessage(source, MessageSchema);
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.scalars.Message",
      name: "Message",
      package: "testapis.basic.scalars",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es > 'generates code for a message with oneofs with isMessage' 1`] = `
"import { isMessage, MessageShape } from "@bufbuild/protobuf";
import {
  OneofMemberMessage1,
  OneofMemberMessage2,
  OneofParentSchema,
} from "@testapis/protobuf-es-v2/testapis/oneof/message_only/message_only_pb";
import { builder } from "../../builder";

export const OneofParent$Ref = builder.objectRef<
  MessageShape<typeof OneofParentSchema>
>("OneofParent");
builder.objectType(OneofParent$Ref, {
  name: "OneofParent",
  fields: (t) => ({
    normalField: t.expose("normalField", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: { name: "normal_field", typeFullName: "string" },
      },
    }),
    requiredOneofMembers: t.field({
      type: OneofParentRequiredOneofMembers$Ref,
      nullable: false,
      description: "Required. disallow not_set.",
      resolve: (source) => {
        const value = source.requiredOneofMembers.value as
          | OneofMemberMessage1
          | OneofMemberMessage2
          | undefined;
        if (value == null) {
          throw new Error("requiredOneofMembers should not be null");
        }
        return value;
      },
      extensions: { protobufField: { name: "required_oneof_members" } },
    }),
    optionalOneofMembers: t.field({
      type: OneofParentOptionalOneofMembers$Ref,
      nullable: true,
      resolve: (source) => {
        return (source.optionalOneofMembers.value ?? null) as
          | OneofMemberMessage1
          | OneofMemberMessage2
          | undefined
          | null;
      },
      extensions: { protobufField: { name: "optional_oneof_members" } },
    }),
  }),
  isTypeOf: (source) => {
    return isMessage(source, OneofParentSchema);
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.oneof.message_only.OneofParent",
      name: "OneofParent",
      package: "testapis.oneof.message_only",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es > 'generates code for a simple message with isMessage' 1`] = `
"import { isMessage, MessageShape } from "@bufbuild/protobuf";
import { PrimitivesSchema } from "@testapis/protobuf-es-v2/testapis/basic/scalars/scalars_pb";
import { builder } from "../../builder";

export const Primitives$Ref = builder.objectRef<
  MessageShape<typeof PrimitivesSchema>
>("Primitives");
builder.objectType(Primitives$Ref, {
  name: "Primitives",
  fields: (t) => ({
    requiredDoubleValue: t.expose("requiredDoubleValue", {
      type: "Float",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_double_value",
          typeFullName: "double",
        },
      },
    }),
    requiredFloatValue: t.expose("requiredFloatValue", {
      type: "Float",
      nullable: false,
      extensions: {
        protobufField: { name: "required_float_value", typeFullName: "float" },
      },
    }),
    requiredInt32Value: t.expose("requiredInt32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: { name: "required_int32_value", typeFullName: "int32" },
      },
    }),
    requiredInt64Value: t.expose("requiredInt64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: { name: "required_int64_value", typeFullName: "int64" },
      },
    }),
    requiredUint32Value: t.expose("requiredUint32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_uint32_value",
          typeFullName: "uint32",
        },
      },
    }),
    requiredUint64Value: t.expose("requiredUint64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_uint64_value",
          typeFullName: "uint64",
        },
      },
    }),
    requiredSint32Value: t.expose("requiredSint32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sint32_value",
          typeFullName: "sint32",
        },
      },
    }),
    requiredSint64Value: t.expose("requiredSint64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sint64_value",
          typeFullName: "sint64",
        },
      },
    }),
    requiredFixed32Value: t.expose("requiredFixed32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_fixed32_value",
          typeFullName: "fixed32",
        },
      },
    }),
    requiredFixed64Value: t.expose("requiredFixed64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_fixed64_value",
          typeFullName: "fixed64",
        },
      },
    }),
    requiredSfixed32Value: t.expose("requiredSfixed32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sfixed32_value",
          typeFullName: "sfixed32",
        },
      },
    }),
    requiredSfixed64Value: t.expose("requiredSfixed64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sfixed64_value",
          typeFullName: "sfixed64",
        },
      },
    }),
    requiredBoolValue: t.expose("requiredBoolValue", {
      type: "Boolean",
      nullable: false,
      extensions: {
        protobufField: { name: "required_bool_value", typeFullName: "bool" },
      },
    }),
    requiredStringValue: t.expose("requiredStringValue", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_string_value",
          typeFullName: "string",
        },
      },
    }),
    requiredBytesValue: t.field({
      type: "Byte",
      nullable: false,
      resolve: (source) => {
        return Buffer.from(source.requiredBytesValue);
      },
      extensions: {
        protobufField: { name: "required_bytes_value", typeFullName: "bytes" },
      },
    }),
    requiredDoubleValues: t.expose("requiredDoubleValues", {
      type: ["Float"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_double_values",
          typeFullName: "double",
        },
      },
    }),
    requiredFloatValues: t.expose("requiredFloatValues", {
      type: ["Float"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_float_values", typeFullName: "float" },
      },
    }),
    requiredInt32Values: t.expose("requiredInt32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_int32_values", typeFullName: "int32" },
      },
    }),
    requiredInt64Values: t.expose("requiredInt64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_int64_values", typeFullName: "int64" },
      },
    }),
    requiredUint32Values: t.expose("requiredUint32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_uint32_values",
          typeFullName: "uint32",
        },
      },
    }),
    requiredUint64Values: t.expose("requiredUint64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_uint64_values",
          typeFullName: "uint64",
        },
      },
    }),
    requiredSint32Values: t.expose("requiredSint32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sint32_values",
          typeFullName: "sint32",
        },
      },
    }),
    requiredSint64Values: t.expose("requiredSint64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sint64_values",
          typeFullName: "sint64",
        },
      },
    }),
    requiredFixed32Values: t.expose("requiredFixed32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_fixed32_values",
          typeFullName: "fixed32",
        },
      },
    }),
    requiredFixed64Values: t.expose("requiredFixed64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_fixed64_values",
          typeFullName: "fixed64",
        },
      },
    }),
    requiredSfixed32Values: t.expose("requiredSfixed32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sfixed32_values",
          typeFullName: "sfixed32",
        },
      },
    }),
    requiredSfixed64Values: t.expose("requiredSfixed64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sfixed64_values",
          typeFullName: "sfixed64",
        },
      },
    }),
    requiredBoolValues: t.expose("requiredBoolValues", {
      type: ["Boolean"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_bool_values", typeFullName: "bool" },
      },
    }),
    requiredStringValues: t.expose("requiredStringValues", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_string_values",
          typeFullName: "string",
        },
      },
    }),
    requiredBytesValues: t.field({
      type: ["Byte"],
      nullable: { list: false, items: false },
      resolve: (source) => {
        return source.requiredBytesValues.map((v) => Buffer.from(v));
      },
      extensions: {
        protobufField: { name: "required_bytes_values", typeFullName: "bytes" },
      },
    }),
  }),
  isTypeOf: (source) => {
    return isMessage(source, PrimitivesSchema);
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.scalars.Primitives",
      name: "Primitives",
      package: "testapis.basic.scalars",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es > 'generates code for empty message with isMessage' 1`] = `
"import { isMessage, MessageShape } from "@bufbuild/protobuf";
import { EmptyMessageSchema } from "@testapis/protobuf-es-v2/testapis/basic/empty/empty_pb";
import { builder } from "../../builder";

export const EmptyMessage$Ref = builder.objectRef<
  MessageShape<typeof EmptyMessageSchema>
>("EmptyMessage");
builder.objectType(EmptyMessage$Ref, {
  name: "EmptyMessage",
  fields: (t) => ({
    _: t.field({
      type: "Boolean",
      nullable: true,
      description: "noop field",
      resolve: () => true,
    }),
  }),
  isTypeOf: (source) => {
    return isMessage(source, EmptyMessageSchema);
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.empty.EmptyMessage",
      name: "EmptyMessage",
      package: "testapis.basic.empty",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es > 'generates code for message with squashed oneof fields with isMessage' 1`] = `
"import { isMessage, MessageShape } from "@bufbuild/protobuf";
import {
  EnumWillRename,
  PrefixedEnum,
  PrefixedMessage_InnerMessage,
  PrefixedMessage_InnerMessage2,
  PrefixedMessageSchema,
} from "@testapis/protobuf-es-v2/testapis/options/message_and_field/message_and_field_pb";
import { builder } from "../../builder";

export const PrefixedMessage$Ref = builder.objectRef<
  MessageShape<typeof PrefixedMessageSchema>
>("PrefixedMessage");
builder.objectType(PrefixedMessage$Ref, {
  name: "PrefixedMessage",
  fields: (t) => ({
    id: t.expose("id", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "id",
          typeFullName: "uint64",
          options: { "[graphql.field]": { id: true } },
        },
      },
    }),
    body: t.expose("body", {
      type: "String",
      nullable: false,
      extensions: { protobufField: { name: "body", typeFullName: "string" } },
    }),
    prefixedEnum: t.field({
      type: PrefixedEnum$Ref,
      nullable: true,
      resolve: (source) => {
        if (source.prefixedEnum === PrefixedEnum.PREFIXED_ENUM_UNSPECIFIED) {
          return null;
        }

        if (source.prefixedEnum === PrefixedEnum.PREFIXED_IGNORED) {
          throw new Error("PREFIXED_IGNORED is ignored in GraphQL schema");
        }

        return source.prefixedEnum;
      },
      extensions: {
        protobufField: {
          name: "prefixed_enum",
          typeFullName: "testapis.options.message_and_field.PrefixedEnum",
        },
      },
    }),
    thisFieldWasRenamed: t.expose("thisFieldWillBeRenamed", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "this_field_will_be_renamed",
          typeFullName: "string",
          options: { "[graphql.field]": { name: "thisFieldWasRenamed" } },
        },
      },
    }),
    skipResolver: t.expose("skipResolver", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "skip_resolver",
          typeFullName: "string",
          options: { "[graphql.field]": { skipResolver: true } },
        },
      },
    }),
    squashedMessage: t.field({
      type: PrefixedMessageSquashedMessage$Ref,
      nullable: true,
      resolve: (source) => {
        return (source.squashedMessage?.squashedMessage.value ?? null) as
          | PrefixedMessage_InnerMessage
          | PrefixedMessage_InnerMessage2
          | undefined
          | null;
      },
      extensions: {
        protobufField: {
          name: "squashed_message",
          typeFullName:
            "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        },
      },
    }),
    renamedMessage: t.expose("renamedMessage", {
      type: RenamedMessage$Ref,
      nullable: true,
      extensions: {
        protobufField: {
          name: "renamed_message",
          typeFullName: "testapis.options.message_and_field.MessageWillRename",
        },
      },
    }),
    renamedEnum: t.field({
      type: RenamedEnum$Ref,
      nullable: true,
      resolve: (source) => {
        if (source.renamedEnum === EnumWillRename.UNSPECIFIED) {
          return null;
        }

        return source.renamedEnum;
      },
      extensions: {
        protobufField: {
          name: "renamed_enum",
          typeFullName: "testapis.options.message_and_field.EnumWillRename",
        },
      },
    }),
    notIgnoredMessage: t.expose("notIgnoredMessage", {
      type: IgnoredMessageNotIgnored$Ref,
      nullable: true,
      extensions: {
        protobufField: {
          name: "not_ignored_message",
          typeFullName:
            "testapis.options.message_and_field.IgnoredMessage.NotIgnored",
        },
      },
    }),
    squashedMessages: t.field({
      type: [PrefixedMessageSquashedMessage$Ref],
      nullable: { list: true, items: false },
      resolve: (source) => {
        return source.squashedMessages.map((item) => {
          const value = item.squashedMessage.value as
            | PrefixedMessage_InnerMessage
            | PrefixedMessage_InnerMessage2
            | undefined;
          if (value == null) {
            throw new Error("squashedMessages should not be null");
          }
          return value;
        });
      },
      extensions: {
        protobufField: {
          name: "squashed_messages",
          typeFullName:
            "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        },
      },
    }),
    partialIgnoreOneof: t.field({
      type: PrefixedMessagePartialIgnoreOneof$Ref,
      nullable: true,
      resolve: (source) => {
        return (source.partialIgnoreOneof.value ?? null) as
          | PrefixedMessage_InnerMessage
          | undefined
          | null;
      },
      extensions: { protobufField: { name: "partial_ignore_oneof" } },
    }),
  }),
  isTypeOf: (source) => {
    return isMessage(source, PrefixedMessageSchema);
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.options.message_and_field.PrefixedMessage",
      name: "PrefixedMessage",
      package: "testapis.options.message_and_field",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es > 'generates code for nested types with isMessage' 1`] = `
"import { isMessage, MessageShape } from "@bufbuild/protobuf";
import {
  ParentMessage_NestedEnum,
  ParentMessageSchema,
} from "@testapis/protobuf-es-v2/testapis/basic/nested/nested_pb";
import { builder } from "../../builder";

export const ParentMessage$Ref = builder.objectRef<
  MessageShape<typeof ParentMessageSchema>
>("ParentMessage");
builder.objectType(ParentMessage$Ref, {
  name: "ParentMessage",
  fields: (t) => ({
    body: t.expose("body", {
      type: "String",
      nullable: false,
      extensions: { protobufField: { name: "body", typeFullName: "string" } },
    }),
    nested: t.expose("nested", {
      type: ParentMessageNestedMessage$Ref,
      nullable: true,
      extensions: {
        protobufField: {
          name: "nested",
          typeFullName: "testapis.basic.nested.ParentMessage.NestedMessage",
        },
      },
    }),
    nestedEnum: t.field({
      type: ParentMessageNestedEnum$Ref,
      nullable: true,
      resolve: (source) => {
        if (
          source.nestedEnum === ParentMessage_NestedEnum.NESTED_ENUM_UNSPECIFIED
        ) {
          return null;
        }

        return source.nestedEnum;
      },
      extensions: {
        protobufField: {
          name: "nested_enum",
          typeFullName: "testapis.basic.nested.ParentMessage.NestedEnum",
        },
      },
    }),
  }),
  isTypeOf: (source) => {
    return isMessage(source, ParentMessageSchema);
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.nested.ParentMessage",
      name: "ParentMessage",
      package: "testapis.basic.nested",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es-v1 > 'generates code for a message with nested fields' 1`] = `
"import { Message } from "@testapis/protobuf-es/testapis/basic/scalars/scalars_pb";
import { builder } from "../../builder";

export const Message$Ref = builder.objectRef<Message>("Message");
builder.objectType(Message$Ref, {
  name: "Message",
  fields: (t) => ({
    requiredPrimitives: t.field({
      type: Primitives$Ref,
      nullable: false,
      description: "Required.",
      resolve: (source) => {
        return source.requiredPrimitives!;
      },
      extensions: {
        protobufField: {
          name: "required_primitives",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    optionalPrimitives: t.expose("optionalPrimitives", {
      type: Primitives$Ref,
      nullable: true,
      description: "Optional.",
      extensions: {
        protobufField: {
          name: "optional_primitives",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    requiredPrimitivesList: t.field({
      type: [Primitives$Ref],
      nullable: { list: false, items: false },
      description: "Required.",
      resolve: (source) => {
        return source.requiredPrimitivesList!;
      },
      extensions: {
        protobufField: {
          name: "required_primitives_list",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    optionalPrimitivesList: t.expose("optionalPrimitivesList", {
      type: [Primitives$Ref],
      nullable: { list: true, items: false },
      description: "Optional.",
      extensions: {
        protobufField: {
          name: "optional_primitives_list",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
  }),
  isTypeOf: (source) => {
    return source instanceof Message;
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.scalars.Message",
      name: "Message",
      package: "testapis.basic.scalars",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es-v1 > 'generates code for a message with oneofs' 1`] = `
"import {
  OneofMemberMessage1,
  OneofMemberMessage2,
  OneofParent,
} from "@testapis/protobuf-es/testapis/oneof/message_only/message_only_pb";
import { builder } from "../../builder";

export const OneofParent$Ref = builder.objectRef<OneofParent>("OneofParent");
builder.objectType(OneofParent$Ref, {
  name: "OneofParent",
  fields: (t) => ({
    normalField: t.expose("normalField", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: { name: "normal_field", typeFullName: "string" },
      },
    }),
    requiredOneofMembers: t.field({
      type: OneofParentRequiredOneofMembers$Ref,
      nullable: false,
      description: "Required. disallow not_set.",
      resolve: (source) => {
        const value = source.requiredOneofMembers.value as
          | OneofMemberMessage1
          | OneofMemberMessage2
          | undefined;
        if (value == null) {
          throw new Error("requiredOneofMembers should not be null");
        }
        return value;
      },
      extensions: { protobufField: { name: "required_oneof_members" } },
    }),
    optionalOneofMembers: t.field({
      type: OneofParentOptionalOneofMembers$Ref,
      nullable: true,
      resolve: (source) => {
        return (source.optionalOneofMembers.value ?? null) as
          | OneofMemberMessage1
          | OneofMemberMessage2
          | undefined
          | null;
      },
      extensions: { protobufField: { name: "optional_oneof_members" } },
    }),
  }),
  isTypeOf: (source) => {
    return source instanceof OneofParent;
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.oneof.message_only.OneofParent",
      name: "OneofParent",
      package: "testapis.oneof.message_only",
    },
  },
});
"
`;

exports[`createObjectTypeCode > protobuf-es-v1 > 'generates code for a simple message' 1`] = `
"import { Primitives } from "@testapis/protobuf-es/testapis/basic/scalars/scalars_pb";
import { builder } from "../../builder";

export const Primitives$Ref = builder.objectRef<Primitives>("Primitives");
builder.objectType(Primitives$Ref, {
  name: "Primitives",
  fields: (t) => ({
    requiredDoubleValue: t.expose("requiredDoubleValue", {
      type: "Float",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_double_value",
          typeFullName: "double",
        },
      },
    }),
    requiredFloatValue: t.expose("requiredFloatValue", {
      type: "Float",
      nullable: false,
      extensions: {
        protobufField: { name: "required_float_value", typeFullName: "float" },
      },
    }),
    requiredInt32Value: t.expose("requiredInt32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: { name: "required_int32_value", typeFullName: "int32" },
      },
    }),
    requiredInt64Value: t.expose("requiredInt64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: { name: "required_int64_value", typeFullName: "int64" },
      },
    }),
    requiredUint32Value: t.expose("requiredUint32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_uint32_value",
          typeFullName: "uint32",
        },
      },
    }),
    requiredUint64Value: t.expose("requiredUint64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_uint64_value",
          typeFullName: "uint64",
        },
      },
    }),
    requiredSint32Value: t.expose("requiredSint32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sint32_value",
          typeFullName: "sint32",
        },
      },
    }),
    requiredSint64Value: t.expose("requiredSint64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sint64_value",
          typeFullName: "sint64",
        },
      },
    }),
    requiredFixed32Value: t.expose("requiredFixed32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_fixed32_value",
          typeFullName: "fixed32",
        },
      },
    }),
    requiredFixed64Value: t.expose("requiredFixed64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_fixed64_value",
          typeFullName: "fixed64",
        },
      },
    }),
    requiredSfixed32Value: t.expose("requiredSfixed32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sfixed32_value",
          typeFullName: "sfixed32",
        },
      },
    }),
    requiredSfixed64Value: t.expose("requiredSfixed64Value", {
      type: "Int64",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sfixed64_value",
          typeFullName: "sfixed64",
        },
      },
    }),
    requiredBoolValue: t.expose("requiredBoolValue", {
      type: "Boolean",
      nullable: false,
      extensions: {
        protobufField: { name: "required_bool_value", typeFullName: "bool" },
      },
    }),
    requiredStringValue: t.expose("requiredStringValue", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_string_value",
          typeFullName: "string",
        },
      },
    }),
    requiredBytesValue: t.field({
      type: "Byte",
      nullable: false,
      resolve: (source) => {
        return Buffer.from(source.requiredBytesValue);
      },
      extensions: {
        protobufField: { name: "required_bytes_value", typeFullName: "bytes" },
      },
    }),
    requiredDoubleValues: t.expose("requiredDoubleValues", {
      type: ["Float"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_double_values",
          typeFullName: "double",
        },
      },
    }),
    requiredFloatValues: t.expose("requiredFloatValues", {
      type: ["Float"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_float_values", typeFullName: "float" },
      },
    }),
    requiredInt32Values: t.expose("requiredInt32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_int32_values", typeFullName: "int32" },
      },
    }),
    requiredInt64Values: t.expose("requiredInt64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_int64_values", typeFullName: "int64" },
      },
    }),
    requiredUint32Values: t.expose("requiredUint32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_uint32_values",
          typeFullName: "uint32",
        },
      },
    }),
    requiredUint64Values: t.expose("requiredUint64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_uint64_values",
          typeFullName: "uint64",
        },
      },
    }),
    requiredSint32Values: t.expose("requiredSint32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sint32_values",
          typeFullName: "sint32",
        },
      },
    }),
    requiredSint64Values: t.expose("requiredSint64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sint64_values",
          typeFullName: "sint64",
        },
      },
    }),
    requiredFixed32Values: t.expose("requiredFixed32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_fixed32_values",
          typeFullName: "fixed32",
        },
      },
    }),
    requiredFixed64Values: t.expose("requiredFixed64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_fixed64_values",
          typeFullName: "fixed64",
        },
      },
    }),
    requiredSfixed32Values: t.expose("requiredSfixed32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sfixed32_values",
          typeFullName: "sfixed32",
        },
      },
    }),
    requiredSfixed64Values: t.expose("requiredSfixed64Values", {
      type: ["Int64"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sfixed64_values",
          typeFullName: "sfixed64",
        },
      },
    }),
    requiredBoolValues: t.expose("requiredBoolValues", {
      type: ["Boolean"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_bool_values", typeFullName: "bool" },
      },
    }),
    requiredStringValues: t.expose("requiredStringValues", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_string_values",
          typeFullName: "string",
        },
      },
    }),
    requiredBytesValues: t.field({
      type: ["Byte"],
      nullable: { list: false, items: false },
      resolve: (source) => {
        return source.requiredBytesValues.map((v) => Buffer.from(v));
      },
      extensions: {
        protobufField: { name: "required_bytes_values", typeFullName: "bytes" },
      },
    }),
  }),
  isTypeOf: (source) => {
    return source instanceof Primitives;
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.scalars.Primitives",
      name: "Primitives",
      package: "testapis.basic.scalars",
    },
  },
});
"
`;

exports[`createObjectTypeCode > ts-proto > 'generates code for a message with nested fields' 1`] = `
"import { Message } from "@testapis/ts-proto/testapis/basic/scalars/scalars";
import { builder } from "../../builder";

export const Message$Ref = builder.objectRef<Message>("Message");
builder.objectType(Message$Ref, {
  name: "Message",
  fields: (t) => ({
    requiredPrimitives: t.field({
      type: Primitives$Ref,
      nullable: false,
      description: "Required.",
      resolve: (source) => {
        return source.requiredPrimitives!;
      },
      extensions: {
        protobufField: {
          name: "required_primitives",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    optionalPrimitives: t.expose("optionalPrimitives", {
      type: Primitives$Ref,
      nullable: true,
      description: "Optional.",
      extensions: {
        protobufField: {
          name: "optional_primitives",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    requiredPrimitivesList: t.field({
      type: [Primitives$Ref],
      nullable: { list: false, items: false },
      description: "Required.",
      resolve: (source) => {
        return source.requiredPrimitivesList!;
      },
      extensions: {
        protobufField: {
          name: "required_primitives_list",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
    optionalPrimitivesList: t.expose("optionalPrimitivesList", {
      type: [Primitives$Ref],
      nullable: { list: true, items: false },
      description: "Optional.",
      extensions: {
        protobufField: {
          name: "optional_primitives_list",
          typeFullName: "testapis.basic.scalars.Primitives",
        },
      },
    }),
  }),
  isTypeOf: (source) => {
    return (source as Message | { $type: string & {}; }).$type ===
      "testapis.basic.scalars.Message";
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.scalars.Message",
      name: "Message",
      package: "testapis.basic.scalars",
    },
  },
});
"
`;

exports[`createObjectTypeCode > ts-proto > 'generates code for a message with oneofs' 1`] = `
"import { OneofParent } from "@testapis/ts-proto/testapis/oneof/message_only/message_only";
import { builder } from "../../builder";

export const OneofParent$Ref = builder.objectRef<OneofParent>("OneofParent");
builder.objectType(OneofParent$Ref, {
  name: "OneofParent",
  fields: (t) => ({
    normalField: t.expose("normalField", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: { name: "normal_field", typeFullName: "string" },
      },
    }),
    requiredOneofMembers: t.field({
      type: OneofParentRequiredOneofMembers$Ref,
      nullable: false,
      description: "Required. disallow not_set.",
      resolve: (source) => {
        const value = source.requiredMessage1 ?? source.requiredMessage2;
        if (value == null) {
          throw new Error("requiredOneofMembers should not be null");
        }
        return value;
      },
      extensions: { protobufField: { name: "required_oneof_members" } },
    }),
    optionalOneofMembers: t.field({
      type: OneofParentOptionalOneofMembers$Ref,
      nullable: true,
      resolve: (source) => {
        const value = source.optionalMessage1 ?? source.optionalMessage2;
        if (value == null) {
          return null;
        }
        return value;
      },
      extensions: { protobufField: { name: "optional_oneof_members" } },
    }),
  }),
  isTypeOf: (source) => {
    return (source as OneofParent | { $type: string & {}; }).$type ===
      "testapis.oneof.message_only.OneofParent";
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.oneof.message_only.OneofParent",
      name: "OneofParent",
      package: "testapis.oneof.message_only",
    },
  },
});
"
`;

exports[`createObjectTypeCode > ts-proto > 'generates code for a simple message' 1`] = `
"import { Primitives } from "@testapis/ts-proto/testapis/basic/scalars/scalars";
import { builder } from "../../builder";

export const Primitives$Ref = builder.objectRef<Primitives>("Primitives");
builder.objectType(Primitives$Ref, {
  name: "Primitives",
  fields: (t) => ({
    requiredDoubleValue: t.expose("requiredDoubleValue", {
      type: "Float",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_double_value",
          typeFullName: "double",
        },
      },
    }),
    requiredFloatValue: t.expose("requiredFloatValue", {
      type: "Float",
      nullable: false,
      extensions: {
        protobufField: { name: "required_float_value", typeFullName: "float" },
      },
    }),
    requiredInt32Value: t.expose("requiredInt32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: { name: "required_int32_value", typeFullName: "int32" },
      },
    }),
    requiredInt64Value: t.expose("requiredInt64Value", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: { name: "required_int64_value", typeFullName: "int64" },
      },
    }),
    requiredUint32Value: t.expose("requiredUint32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_uint32_value",
          typeFullName: "uint32",
        },
      },
    }),
    requiredUint64Value: t.expose("requiredUint64Value", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_uint64_value",
          typeFullName: "uint64",
        },
      },
    }),
    requiredSint32Value: t.expose("requiredSint32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sint32_value",
          typeFullName: "sint32",
        },
      },
    }),
    requiredSint64Value: t.expose("requiredSint64Value", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sint64_value",
          typeFullName: "sint64",
        },
      },
    }),
    requiredFixed32Value: t.expose("requiredFixed32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_fixed32_value",
          typeFullName: "fixed32",
        },
      },
    }),
    requiredFixed64Value: t.expose("requiredFixed64Value", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_fixed64_value",
          typeFullName: "fixed64",
        },
      },
    }),
    requiredSfixed32Value: t.expose("requiredSfixed32Value", {
      type: "Int",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sfixed32_value",
          typeFullName: "sfixed32",
        },
      },
    }),
    requiredSfixed64Value: t.expose("requiredSfixed64Value", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_sfixed64_value",
          typeFullName: "sfixed64",
        },
      },
    }),
    requiredBoolValue: t.expose("requiredBoolValue", {
      type: "Boolean",
      nullable: false,
      extensions: {
        protobufField: { name: "required_bool_value", typeFullName: "bool" },
      },
    }),
    requiredStringValue: t.expose("requiredStringValue", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "required_string_value",
          typeFullName: "string",
        },
      },
    }),
    requiredBytesValue: t.field({
      type: "Byte",
      nullable: false,
      resolve: (source) => {
        return Buffer.from(source.requiredBytesValue);
      },
      extensions: {
        protobufField: { name: "required_bytes_value", typeFullName: "bytes" },
      },
    }),
    requiredDoubleValues: t.expose("requiredDoubleValues", {
      type: ["Float"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_double_values",
          typeFullName: "double",
        },
      },
    }),
    requiredFloatValues: t.expose("requiredFloatValues", {
      type: ["Float"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_float_values", typeFullName: "float" },
      },
    }),
    requiredInt32Values: t.expose("requiredInt32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_int32_values", typeFullName: "int32" },
      },
    }),
    requiredInt64Values: t.expose("requiredInt64Values", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_int64_values", typeFullName: "int64" },
      },
    }),
    requiredUint32Values: t.expose("requiredUint32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_uint32_values",
          typeFullName: "uint32",
        },
      },
    }),
    requiredUint64Values: t.expose("requiredUint64Values", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_uint64_values",
          typeFullName: "uint64",
        },
      },
    }),
    requiredSint32Values: t.expose("requiredSint32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sint32_values",
          typeFullName: "sint32",
        },
      },
    }),
    requiredSint64Values: t.expose("requiredSint64Values", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sint64_values",
          typeFullName: "sint64",
        },
      },
    }),
    requiredFixed32Values: t.expose("requiredFixed32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_fixed32_values",
          typeFullName: "fixed32",
        },
      },
    }),
    requiredFixed64Values: t.expose("requiredFixed64Values", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_fixed64_values",
          typeFullName: "fixed64",
        },
      },
    }),
    requiredSfixed32Values: t.expose("requiredSfixed32Values", {
      type: ["Int"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sfixed32_values",
          typeFullName: "sfixed32",
        },
      },
    }),
    requiredSfixed64Values: t.expose("requiredSfixed64Values", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_sfixed64_values",
          typeFullName: "sfixed64",
        },
      },
    }),
    requiredBoolValues: t.expose("requiredBoolValues", {
      type: ["Boolean"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: { name: "required_bool_values", typeFullName: "bool" },
      },
    }),
    requiredStringValues: t.expose("requiredStringValues", {
      type: ["String"],
      nullable: { list: false, items: false },
      extensions: {
        protobufField: {
          name: "required_string_values",
          typeFullName: "string",
        },
      },
    }),
    requiredBytesValues: t.field({
      type: ["Byte"],
      nullable: { list: false, items: false },
      resolve: (source) => {
        return source.requiredBytesValues.map((v) => Buffer.from(v));
      },
      extensions: {
        protobufField: { name: "required_bytes_values", typeFullName: "bytes" },
      },
    }),
  }),
  isTypeOf: (source) => {
    return (source as Primitives | { $type: string & {}; }).$type ===
      "testapis.basic.scalars.Primitives";
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.scalars.Primitives",
      name: "Primitives",
      package: "testapis.basic.scalars",
    },
  },
});
"
`;

exports[`createObjectTypeCode > ts-proto > 'generates code for empty message' 1`] = `
"import { EmptyMessage } from "@testapis/ts-proto/testapis/basic/empty/empty";
import { builder } from "../../builder";

export const EmptyMessage$Ref = builder.objectRef<EmptyMessage>("EmptyMessage");
builder.objectType(EmptyMessage$Ref, {
  name: "EmptyMessage",
  fields: (t) => ({
    _: t.field({
      type: "Boolean",
      nullable: true,
      description: "noop field",
      resolve: () => true,
    }),
  }),
  isTypeOf: (source) => {
    return (source as EmptyMessage | { $type: string & {}; }).$type ===
      "testapis.basic.empty.EmptyMessage";
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.empty.EmptyMessage",
      name: "EmptyMessage",
      package: "testapis.basic.empty",
    },
  },
});
"
`;

exports[`createObjectTypeCode > ts-proto > 'generates code for nested types' 1`] = `
"import {
  ParentMessage,
  ParentMessage_NestedEnum,
} from "@testapis/ts-proto/testapis/basic/nested/nested";
import { builder } from "../../builder";

export const ParentMessage$Ref = builder.objectRef<ParentMessage>(
  "ParentMessage",
);
builder.objectType(ParentMessage$Ref, {
  name: "ParentMessage",
  fields: (t) => ({
    body: t.expose("body", {
      type: "String",
      nullable: false,
      extensions: { protobufField: { name: "body", typeFullName: "string" } },
    }),
    nested: t.expose("nested", {
      type: ParentMessageNestedMessage$Ref,
      nullable: true,
      extensions: {
        protobufField: {
          name: "nested",
          typeFullName: "testapis.basic.nested.ParentMessage.NestedMessage",
        },
      },
    }),
    nestedEnum: t.field({
      type: ParentMessageNestedEnum$Ref,
      nullable: true,
      resolve: (source) => {
        if (
          source.nestedEnum === ParentMessage_NestedEnum.NESTED_ENUM_UNSPECIFIED
        ) {
          return null;
        }

        return source.nestedEnum;
      },
      extensions: {
        protobufField: {
          name: "nested_enum",
          typeFullName: "testapis.basic.nested.ParentMessage.NestedEnum",
        },
      },
    }),
  }),
  isTypeOf: (source) => {
    return (source as ParentMessage | { $type: string & {}; }).$type ===
      "testapis.basic.nested.ParentMessage";
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.basic.nested.ParentMessage",
      name: "ParentMessage",
      package: "testapis.basic.nested",
    },
  },
});
"
`;

exports[`createObjectTypeCode > with extensions > 'generates code for message with field extensions' 1`] = `
"import {
  EnumWillRename,
  PrefixedEnum,
  PrefixedMessage,
} from "@testapis/ts-proto/testapis/options/message_and_field/message_and_field";
import { builder } from "../../builder";

export const PrefixedMessage$Ref = builder.objectRef<PrefixedMessage>(
  "PrefixedMessage",
);
builder.objectType(PrefixedMessage$Ref, {
  name: "PrefixedMessage",
  fields: (t) => ({
    id: t.expose("id", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "id",
          typeFullName: "uint64",
          options: { "[graphql.field]": { id: true } },
        },
      },
    }),
    body: t.expose("body", {
      type: "String",
      nullable: false,
      extensions: { protobufField: { name: "body", typeFullName: "string" } },
    }),
    prefixedEnum: t.field({
      type: PrefixedEnum$Ref,
      nullable: true,
      resolve: (source) => {
        if (source.prefixedEnum === PrefixedEnum.PREFIXED_ENUM_UNSPECIFIED) {
          return null;
        }

        if (source.prefixedEnum === PrefixedEnum.PREFIXED_IGNORED) {
          throw new Error("PREFIXED_IGNORED is ignored in GraphQL schema");
        }

        return source.prefixedEnum;
      },
      extensions: {
        protobufField: {
          name: "prefixed_enum",
          typeFullName: "testapis.options.message_and_field.PrefixedEnum",
        },
      },
    }),
    thisFieldWasRenamed: t.expose("thisFieldWillBeRenamed", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "this_field_will_be_renamed",
          typeFullName: "string",
          options: { "[graphql.field]": { name: "thisFieldWasRenamed" } },
        },
      },
    }),
    skipResolver: t.expose("skipResolver", {
      type: "String",
      nullable: false,
      extensions: {
        protobufField: {
          name: "skip_resolver",
          typeFullName: "string",
          options: { "[graphql.field]": { skipResolver: true } },
        },
      },
    }),
    squashedMessage: t.field({
      type: PrefixedMessageSquashedMessage$Ref,
      nullable: true,
      resolve: (source) => {
        const value = source.squashedMessage?.oneofField ??
          source.squashedMessage?.oneofField2;
        if (value == null) {
          return null;
        }
        return value;
      },
      extensions: {
        protobufField: {
          name: "squashed_message",
          typeFullName:
            "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        },
      },
    }),
    renamedMessage: t.expose("renamedMessage", {
      type: RenamedMessage$Ref,
      nullable: true,
      extensions: {
        protobufField: {
          name: "renamed_message",
          typeFullName: "testapis.options.message_and_field.MessageWillRename",
        },
      },
    }),
    renamedEnum: t.field({
      type: RenamedEnum$Ref,
      nullable: true,
      resolve: (source) => {
        if (
          source.renamedEnum === EnumWillRename.ENUM_WILL_RENAME_UNSPECIFIED
        ) {
          return null;
        }

        return source.renamedEnum;
      },
      extensions: {
        protobufField: {
          name: "renamed_enum",
          typeFullName: "testapis.options.message_and_field.EnumWillRename",
        },
      },
    }),
    notIgnoredMessage: t.expose("notIgnoredMessage", {
      type: IgnoredMessageNotIgnored$Ref,
      nullable: true,
      extensions: {
        protobufField: {
          name: "not_ignored_message",
          typeFullName:
            "testapis.options.message_and_field.IgnoredMessage.NotIgnored",
        },
      },
    }),
    squashedMessages: t.field({
      type: [PrefixedMessageSquashedMessage$Ref],
      nullable: { list: true, items: false },
      resolve: (source) => {
        return source.squashedMessages.map((item) => {
          const value = item?.oneofField ?? item?.oneofField2;
          if (value == null) {
            throw new Error("squashedMessages should not be null");
          }
          return value;
        });
      },
      extensions: {
        protobufField: {
          name: "squashed_messages",
          typeFullName:
            "testapis.options.message_and_field.PrefixedMessage.SquashedMessage",
        },
      },
    }),
    partialIgnoreOneof: t.field({
      type: PrefixedMessagePartialIgnoreOneof$Ref,
      nullable: true,
      resolve: (source) => {
        const value = source.oneofNotIgnoredField;
        if (value == null) {
          return null;
        }
        return value;
      },
      extensions: { protobufField: { name: "partial_ignore_oneof" } },
    }),
  }),
  isTypeOf: (source) => {
    return (source as PrefixedMessage | { $type: string & {}; }).$type ===
      "testapis.options.message_and_field.PrefixedMessage";
  },
  extensions: {
    protobufMessage: {
      fullName: "testapis.options.message_and_field.PrefixedMessage",
      name: "PrefixedMessage",
      package: "testapis.options.message_and_field",
    },
  },
});
"
`;
